--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,65 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+/* src/components/Login.css */
+.login-container {
+  width: 400px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-label {
+  font-weight: bold;
+  color: #343a40;
+}
+
+.form-control {
+  height: 45px;
+  font-size: 16px;
+}
+
+.login-button {
+  width: 100%;
+  height: 45px;
+  font-size: 18px;
+  background-color: #007bff;
+  border: 1px solid #007bff;
+}
+
+.login-button:hover {
+  background-color: #0056b3;
+  border: 1px solid #0056b3;
+}
+
+.login-button:active {
+  background-color: #0056b3;
+  border: 1px solid #0056b3;
+}
+
+/* Center the login page */
+.App {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #f8f9fa; /* Bootstrap background color */
+}
+
+.App-header {
+  text-align: center;
+  color: #007bff;
+  margin-bottom: 30px;
 }
